🫴 Fix #9: Add specialized queries (#10)
Reviewed-on: https://codefirst.iut.uca.fr/git/alexis.drai/pokemong_api/pulls/10
